# ham

./: .gitignore  404.html  Cargo.toml  contributing.html  index.html  introduction.html  license.md  primitive_types.html  print.html  readme.md  searchindex.js  searchindex.json
.github/workflows/: book_cd.yml  rust_ci.yml
examples/: demo.ham  demo2.ham  errors.ham  external.ham  loop.ham  module.ham  pointer.ham
examples/1_project/src/: main.ham
ham_book/: Cargo.toml  book.toml
ham_book/src/: SUMMARY.md  contributing.md  introduction.md  primitive_types.md
ham_book/src/introduction/: installing.md  usage.md
ham_core/: Cargo.toml  readme.md
ham_core/src/: ast.rs  ast_types.rs  lib.rs  primitive_values.rs  runtime.rs  stack.rs  types.rs  utils.rs
ham_core/src/ast_types/: ast_base.rs  boxed_val.rs  break_ast.rs  expression.rs  fn_call.rs  fn_def.rs  if_ast.rs  module.rs  reference.rs  result.rs  return_ast.rs  var_assign.rs  var_def.rs  while_block.rs
ham_core/src/primitive_values/: boolean.rs  number.rs  pointer.rs  primitive_base.rs  string.rs
ham_manager/: Cargo.toml  readme.md
ham_manager/src/: lib.rs
introduction/: installing.html  usage.html
src/: ast.rs  ham.rs  main.rs  runtime.rs  stack.rs  test.rs  tokenizer.rs  utils.rs
test/: demo.ham
tests/: manifest.rs  tokenizer.rs
