[package]
name = "ham"
version = "1.0.0"
edition = "2018"
authors = ["Marc Espín"]

[dependencies]
regex = { version = "1",  features = ["pattern"] }
dyn-clone = "1.0.4"
clap = "2.33.3"
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
erased-serde = "0.3"
serde_derive = "1.0.126"