[package]
name = "ham"
version = "0.0.1"
edition = "2018"
authors = ["Marc Espín"]

[dependencies]
regex = { version = "1",  features = ["pattern"] }
dyn-clone = "1.0.4"
clap = "3.0.0-beta.2"
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
erased-serde = "0.3"
question = "0.2.2"