[package]
name = "ham"
version = "0.0.2"
edition = "2018"
authors = ["Marc Espín Sanz"]

[workspace]
members = [
    "ham_core",
    "ham_manager"
]
excludes = [
    "ham_book"
]

[dependencies]
clap = "3.0.0-beta.2"
serde_json = "1.0.64"
question = "0.2.2"
ham_core = { path = "ham_core"}
ham_manager = { path = "ham_manager"}