[package]
name = "ham_core"
version = "0.0.2"
edition = "2018"
authors = ["Marc Espín Sanz"]

[dependencies]
regex = { version = "1",  features = ["pattern"] }
dyn-clone = "1.0.4"
erased-serde = "0.3"
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
